# dataflow-analyzer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
dataflow_analyzer/: __init__.py  data_source.py  processing.py  strategies.py  visualization.py
dataflow_analyzer/sample_data/: sonda_sample.xml
demos/: demo_comparison.py  demo_wind.py
tests/: conftest.py  test_data_source.py  test_processing.py  test_visualization.py
