[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataflow_analyzer"
version = "0.1.0"
description = "DataFlow Analyzer library"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Carlos Pradenas Sepúlveda", email = "c.pradenas02@ufromail.cl"},
]
dependencies = [
    "pandas",
    "polars",
    "lxml",
]

[project.optional-dependencies]
influx = [
    "influxdb-client",
    "influxdb"
]

[project.scripts]
# cli-name = "dataflow_analyzer.module:function"

[tool.setuptools.packages.find]
where = ["."]
